--- a/.coveragerc
+++ b/.coveragerc
@@ -1424,6 +1424,11 @@ omit =
     homeassistant/components/tplink_omada/controller.py
     homeassistant/components/tplink_omada/update.py
     homeassistant/components/traccar/device_tracker.py
+    homeassistant/components/traccar_server/__init__.py
+    homeassistant/components/traccar_server/coordinator.py
+    homeassistant/components/traccar_server/device_tracker.py
+    homeassistant/components/traccar_server/entity.py
+    homeassistant/components/traccar_server/helpers.py
     homeassistant/components/tractive/__init__.py
     homeassistant/components/tractive/binary_sensor.py
     homeassistant/components/tractive/device_tracker.py
