--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -543,6 +543,7 @@ bimmer-connected[china]==0.14.6
 # homeassistant.components.bizkaibus
 bizkaibus==0.1.1
 
+# homeassistant.components.eq3btsmart
 # homeassistant.components.esphome
 bleak-esphome==0.4.1
 
@@ -804,6 +805,9 @@ epson-projector==0.5.1
 
 # homeassistant.components.epsonworkforce
 epsonprinter==0.0.9
+
+# homeassistant.components.eq3btsmart
+eq3btsmart==1.0.1
 
 # homeassistant.components.esphome
 esphome-dashboard-api==1.2.3
