--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2429,7 +2429,7 @@ rfk101py==0.0.1
 rflink==0.0.65
 
 # homeassistant.components.ring
-ring-doorbell[listen]==0.8.6
+ring-doorbell[listen]==0.8.7.dev0
 
 # homeassistant.components.fleetgo
 ritassist==0.9.2
